--- a/pom.xml
+++ b/pom.xml
@@ -1,26 +1,35 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>www.sunflower.com</groupId>
-  <artifactId>www.sunflower.asone</artifactId>
-  <packaging>pom</packaging>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>www.sunflower.asone</name>
-  <url>http://maven.apache.org</url>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
-  <build>
-    <finalName>www.sunflower.asone</finalName>
-  </build>
-  <modules>
-  	<module>sunflower-admin</module>
-  	<module>sunflower-service</module>
-  	<module>sunflower-config</module>
-  </modules>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>www.sunflower.com</groupId>
+	<artifactId>www.sunflower.asone</artifactId>
+	<packaging>pom</packaging>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>www.sunflower.asone</name>
+	<url>http://maven.apache.org</url>
+	<properties>
+		<project.version>0.0.1-SNAPSHOT</project.version>
+		<log4j.version>1.2.17</log4j.version>
+		<mybatis.version>3.2.8</mybatis.version>
+		<slf4j.version>1.7.7</slf4j.version>
+		<spring.version>4.1.2.RELEASE</spring.version>
+		<spring.security.version>3.2.5.RELEASE</spring.security.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
+	<build>
+		<finalName>www.sunflower.asone</finalName>
+	</build>
+	<modules>
+		<module>sunflower-admin</module>
+		<module>sunflower-service</module>
+		<module>sunflower-config</module>
+	</modules>
 </project>
