--- a/sunflower-admin/pom.xml
+++ b/sunflower-admin/pom.xml
@@ -1,27 +1,31 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>www.sunflower.com</groupId>
-    <artifactId>www.sunflower.asone</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
-  <groupId>www.sunflower.com</groupId>
-  <artifactId>sunflower-admin</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>war</packaging>
-  <name>sunflower-admin Maven Webapp</name>
-  <url>http://maven.apache.org</url>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
-  <build>
-    <finalName>sunflower-admin</finalName>
-  </build>
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>www.sunflower.com</groupId>
+		<artifactId>www.sunflower.asone</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
+	<groupId>www.sunflower.com</groupId>
+	<artifactId>sunflower-admin</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>sunflower-admin</name>
+	<url>http://maven.apache.org</url>
+	<dependencies>
+		<dependency>
+			<groupId>www.sunflower.com</groupId>
+			<artifactId>sunflower-service</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>www.sunflower.com</groupId>
+			<artifactId>sunflower-config</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+	</dependencies>
+	<build>
+		<finalName>sunflower-admin</finalName>
+	</build>
 </project>
