--- a/sunflower.framework/pom.xml
+++ b/sunflower.framework/pom.xml
@@ -8,9 +8,9 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <groupId>www.sunflower.com</groupId>
-  <artifactId>sunflower.framework</artifactId>
+  <artifactId>sunflower-framework</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>sunflower.framework</name>
+  <name>sunflower-framework</name>
   <url>http://maven.apache.org</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
