--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 		<module>sunflower-admin</module>
 		<module>sunflower-service</module>
 		<module>sunflower-config</module>
-		<module>sunflower.framework</module>
+		<module>sunflower-framework</module>
 		<module>sunflower-web</module>
 	</modules>
 </project>
