--- a/sunflower-admin/.project
+++ b/sunflower-admin/.project
@@ -3,6 +3,7 @@
 	<name>sunflower-admin</name>
 	<comment></comment>
 	<projects>
+		<project>sunflower-framework</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
@@ -21,12 +22,12 @@
 			</arguments>
 		</buildCommand>
 		<buildCommand>
-			<name>org.eclipse.m2e.core.maven2Builder</name>
+			<name>org.eclipse.wst.validation.validationbuilder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
 		<buildCommand>
-			<name>org.eclipse.wst.validation.validationbuilder</name>
+			<name>org.eclipse.m2e.core.maven2Builder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
